--- a/styles/style.css
+++ b/styles/style.css
@@ -84,3 +84,71 @@ button.submit:active {
     -o-box-shadow: 0 0 10px 5px #356b0b inset;
      
 }
+.form input[type='text'],
+.form input[type='password'] {
+  width: 100%;
+}
+.imgcontainer {
+    text-align: center;
+/*    margin: 24px 0 12px 0;*/
+    background-color: #fefefe;
+}
+
+.cntmenu {
+    overflow: hidden;
+    background-color: #888;
+    font-family: Arial;
+}
+
+.cntmenu a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+}
+
+.cntmenu a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
